Fix layout problem and bump to 0.2.1

--- a/example/stylesheets/index.css
+++ b/example/stylesheets/index.css
@@ -63,6 +63,7 @@ ul.navigation li {
 
 .child-content {
   flex: 1 1 auto;
+  position: relative;
   overflow: hidden;
   background-color: #ffffff;
 }
